<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:gravity="start"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/routeview_back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:clickable="true"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:contentDescription="@string/previous_btn"
            android:src="@drawable/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/action_previous"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:gravity="start"
            android:padding="15dp"
            android:contentDescription="@string/pre_route"
            android:src="@drawable/previous" />

        <ImageView
            android:id="@+id/action_refresh"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:contentDescription="@string/current_route"
            android:src="@drawable/refresh" />

        <ImageView
            android:id="@+id/action_next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:gravity="end"
            android:padding="15dp"
            android:contentDescription="@string/next_route"
            android:src="@drawable/next" />
    </LinearLayout>

</RelativeLayout>