<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="50dp"
                android:stretchColumns="0" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:focusableInTouchMode="true" >

                    <AutoCompleteTextView
                        android:id="@+id/from_text"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:bufferType="normal"
                        android:imeOptions="actionSearch"
                        android:gravity="start"
                        android:labelFor="@id/from_text"
                        android:textColor="#000000" >
                    </AutoCompleteTextView>

                    <ImageView
                        android:id="@+id/globe_from"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:clickable="true"
                        android:gravity="end"
                        android:contentDescription="@string/globe"
                        android:src="@drawable/globe" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                   <ImageView
                       android:id="@+id/change_img"
                       android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:clickable="true"
                       android:contentDescription="@string/switch_pos"
                       android:src="@drawable/switch_img"
                       android:layout_marginBottom="10dp"
                       android:layout_marginTop="10dp"
                       android:layout_gravity="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <AutoCompleteTextView
                        android:id="@+id/to_text"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:labelFor="@id/to_text"
                        android:bufferType="normal"
                        android:imeOptions="actionSearch"
                        android:textColor="#000000" >
                    </AutoCompleteTextView>

                    <ImageView
                        android:id="@+id/globe_to"
                          android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:clickable="true"
                        android:gravity="end"
                        android:contentDescription="@string/globe"
                        android:src="@drawable/globe" />
                </TableRow>

                <RadioGroup
                    android:id="@+id/radio_btngroup"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:checkedButton="@+id/radio_depart"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio_depart"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <RadioButton
                        android:id="@+id/radio_arrival"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:layout_marginStart="@dimen/activity_vertical_margin"/>
                </RadioGroup>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TableRow
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="start"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/calendar"
                            android:src="@drawable/calendar" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:gravity="center"
                            android:paddingLeft="5dip"
                            android:paddingRight="5dip"
                            android:text="@string/divider_string"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/set_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:clickable="true"
                        android:paddingEnd="30dip"
                        android:paddingStart="30dip"
                        android:gravity="end">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:gravity="start"
                            android:contentDescription="@string/clock"
                            android:src="@drawable/clock" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:gravity="center"
                            android:paddingLeft="5dip"
                            android:paddingRight="5dip"
                            android:text="@string/divider_string"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/set_time_text"
                            android:layout_width="55dp"
                            android:layout_height="20dp"
                            android:gravity="start"
                            android:textColor="#000000"/>
                    </TableRow>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:padding="10dp" >

                    <Button
                        android:id="@+id/find_route"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="#EAAB00"
                    	android:textColor="#FFFFFF"
                        android:gravity="center"/>
                </TableRow>

                <ImageView
                    android:id="@+id/history_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:contentDescription="@string/history"
                    android:src="@drawable/down" />

                <ListView
                    android:id="@+id/historylist"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="#FFFFFF"
                    android:cacheColorHint="#EAAB00"
                    android:choiceMode="singleChoice"
                    android:dividerHeight="1dp"
                    tools:ignore="NestedScrolling">
                </ListView>
            </TableLayout>
    </ScrollView>

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1.55"
        android:background="#EFFBEF"
        android:cacheColorHint="#EAAB00"
        android:choiceMode="singleChoice"
        android:dividerHeight="1dp" >
    </ListView>

</android.support.v4.widget.DrawerLayout>